@@ -27,6 +27,8 @@ http://svn.edgewall.org/repos/genshi/tags/0.4.0/
    are callable.
  * Instances of the `genshi.core.Attrs` class are now immutable (they are
    subclasses of `tuple` instead of `list`).
+ * `MarkupTemplate`s can now be instantiated from markup streams, in addition
+   to strings and file-like objects (ticket #69).
 
 
 Version 0.3.5
